--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@antv/l7-district",
-  "version": "2.2.36.beta.0",
+  "version": "2.3.0",
   "scripts": {
     "start": "dumi dev",
     "docs:build": "dumi build",
