--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     ]
   },
   "dependencies": {
+    "@antv/l7": "^2.2.37",
+    "@antv/l7-maps": "^2.2.37",
     "@babel/runtime": "^7.7.7",
     "@turf/circle": "^6.0.1",
     "@turf/distance": "^6.0.1",
