--- a/.travis.yml
+++ b/.travis.yml
@@ -24,16 +24,16 @@ before_install:
 install:
   - export DISPLAY=':99.0'
   - Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-  - yarn install
+  - npm  install
 
 before_script:
   - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
 
 script:
-  - yarn prettier
-  - yarn test
-  - yarn build
-  - yarn deploy
+  - npm run prettier
+  - npm run test
+  - npm run build
+  - npm run deploy
 
 notifications:
    webhooks: ${dingdingWebhooks}
