--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@antv/l7": "^2.3.0",
     "@antv/l7-maps": "^2.3.0",
     "@rollup/plugin-commonjs": "11.0.2",
+    "@types/lodash": "^4.14.170",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.0.5",
     "antd": "^4.6.6",
@@ -63,6 +64,7 @@
     "father-build": "^1.17.2",
     "gh-pages": "^3.0.0",
     "lint-staged": "^10.0.7",
+    "loadsh": "^0.0.4",
     "prettier": "^1.19.1",
     "yorkie": "^2.0.0"
   }
