--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       "@/*": ["src/*"],
       "@@/*": ["src/.umi/*"]
     },
+    "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "strictPropertyInitialization": false
   },
